[workspace]
members = [
    ".",
    "examples",
    "sea-streamer-kafka",
    "sea-streamer-runtime",
    "sea-streamer-socket",
    "sea-streamer-stdio",
    "sea-streamer-types",
]

[package]
name = "sea-streamer"
version = "0.1.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 The stream processing toolkit for Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["database"]
# keywords = []
rust-version = "1.60"

[package.metadata.docs.rs]
features = ["json", "kafka", "stdio", "socket"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sea-streamer-types = { version = "0.1", path = "sea-streamer-types" }
sea-streamer-kafka = { version = "0.1", path = "sea-streamer-kafka", optional = true }
sea-streamer-stdio = { version = "0.1", path = "sea-streamer-stdio", optional = true }
sea-streamer-socket = { version = "0.1", path = "sea-streamer-socket", optional = true }
sea-streamer-runtime = { version = "0.1", path = "sea-streamer-runtime", optional = true }

[features]
json = ["sea-streamer-types/json"]
kafka = ["sea-streamer-kafka"]
stdio = ["sea-streamer-stdio"]
socket = ["sea-streamer-socket"]
runtime = ["sea-streamer-runtime"]
runtime-async-std = ["sea-streamer-socket?/runtime-async-std", "sea-streamer-kafka?/runtime-async-std", "sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["sea-streamer-socket?/runtime-tokio", "sea-streamer-kafka?/runtime-tokio", "sea-streamer-runtime/runtime-tokio"]