[package]
name = "sea-streamer-examples"
version = "1.0.0-rc.1"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "🌊 The stream processing toolkit for Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
rust-version = "1.85"

[dependencies]
anyhow = { version = "1" }
env_logger = { version = "0.11" }
smol = { version = "2", optional = true }
smol-potat = { version = "1", optional = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.10", features = ["full"], optional = true }

[dependencies.sea-streamer]
path = ".."                             # remove this line in your own project
version = "1.0.0-rc"
features = ["kafka", "redis", "stdio", "file", "socket"]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["tokio", "sea-streamer/runtime-tokio"]
runtime-smol = ["smol", "smol-potat", "sea-streamer/runtime-smol"]
