[package]
name = "sea-streamer-file"
version = "0.3.2"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer File Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-file"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
async-std = { version = "1", optional = true }
crczoo = { version = "0.1.3" }
env_logger = { version = "0.9", optional = true }
fastrand = { version = "1" }
flume = { version = "0.10", default-features = false, features = ["async"] }
lazy_static = { version = "1.4" }
log = { version = "0.4", default-features = false }
notify = { version = "6" }
sea-streamer-types = { version = "0.3", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.3", path = "../sea-streamer-runtime", features = ["file"]}
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
structopt = { version = "0.3", optional = true }
thiserror = { version = "1", default-features = false }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
default = []
test = ["anyhow", "async-std?/attributes", "tokio?/full", "env_logger"]
executables = ["anyhow", "tokio/full", "env_logger", "structopt", "sea-streamer-runtime/runtime-tokio", "serde", "serde_json", "sea-streamer-types/serde"]
runtime-async-std = ["async-std", "sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["tokio", "sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
required-features = ["executables"]

[[bin]]
name = "decoder"
path = "src/bin/decoder.rs"
required-features = ["executables"]

[[bin]]
name = "sink"
path = "src/bin/sink.rs"
required-features = ["executables"]

[[bin]]
name = "tail"
path = "src/bin/tail.rs"
required-features = ["executables"]