[package]
name = "sea-streamer-file"
version = "0.5.2"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "🌊 SeaStreamer File Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-file"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.85"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
fastrand = { version = "2" }
flume = { version = "0.11", default-features = false, features = ["async"] }
log = { version = "0.4", default-features = false }
notify = { version = "6" }
sea-streamer-types = { version = "0.5", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.5", path = "../sea-streamer-runtime", features = ["file"]}
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]
smol-potat = "1"

[features]
default = []
test = ["anyhow", "tokio?/full", "env_logger"]
executables = ["anyhow", "tokio/full", "env_logger", "clap", "sea-streamer-runtime/runtime-tokio", "serde", "serde_json", "sea-streamer-types/serde"]
runtime-smol = ["sea-streamer-runtime/runtime-smol"]
runtime-tokio = ["tokio", "sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
required-features = ["executables"]

[[bin]]
name = "ss-decode"
path = "src/bin/decoder.rs"
required-features = ["executables"]

[[bin]]
name = "sink"
path = "src/bin/sink.rs"
required-features = ["executables"]

[[bin]]
name = "tail"
path = "src/bin/tail.rs"
required-features = ["executables"]

[[bin]]
name = "stdin-to-file"
path = "src/bin/stdin-to-file.rs"
required-features = ["executables"]