[package]
name = "sea-streamer-fuse"
version = "1.0.0-rc.1"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "Stream processing toolbox"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-fuse"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { version = "2", default-features = false }
pin-project = { version = "1.1" }

sea-streamer-types = { version = "1.0.0-rc", path = "../sea-streamer-types" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sea-streamer-socket = { version = "1.0.0-rc", path = "../sea-streamer-socket" }
