[package]
name = "sea-streamer-iggy"
version = "1.0.0-rc.1"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "🌊 SeaStreamer Apache Iggy Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-iggy"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "iggy", "stream-processing"]
rust-version = "1.85"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
iggy = { version = "0.9" }
sea-streamer-types = { version = "1.0.0-rc", path = "../sea-streamer-types", features = ["iggy"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1.10.0", optional = true }
tracing = { version = "0.1", default-features = false }

[features]
default = ["runtime-tokio"]
test = ["anyhow", "tokio?/full", "env_logger"]
runtime-tokio = ["tokio"]
