[package]
name = "sea-streamer-kafka"
version = "0.1.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Kafka / Redpanda Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["database"]
# keywords = []
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = { version = "^0.1" }
fastrand = { version = "^1.8" }
rdkafka = { version = "^0.29", default-features = false, features = ["libz"] }
sea-streamer = { version = "^0.1.0", path = ".." }
sea-streamer-runtime = { version = "^0.1.0", path = "../sea-streamer-runtime" }
time = { version = "^0.3", default-features = false, features = ["std"] }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
default = ["runtime-tokio"]
runtime-async-std = ["sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["tokio/full", "rdkafka/tokio", "sea-streamer-runtime/runtime-tokio"]
