[package]
name = "sea-streamer-kafka"
version = "1.0.0-rc.1"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "🌊 SeaStreamer Kafka / Redpanda Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-kafka"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "kafka", "stream-processing"]
rust-version = "1.85"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
smol = { version = "2", optional = true }
mac_address = { version = "1" }
rdkafka = { version = "0.37", default-features = false, features = ["libz"] }
sea-streamer-types = { version = "1.0.0-rc", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "1.0.0-rc", path = "../sea-streamer-runtime" }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]
smol-potat = "1"

[features]
test = ["anyhow", "tokio?/full", "env_logger"]
executables = ["anyhow", "env_logger", "clap", "runtime-tokio", "tokio/full"]
runtime-smol = ["smol", "sea-streamer-runtime/runtime-smol"]
runtime-tokio = ["tokio", "rdkafka/tokio", "sea-streamer-runtime/runtime-tokio"]
# passthru of rdkafka features
libz = ["rdkafka/libz"]
libz-static = ["rdkafka/libz-static"]
ssl = ["rdkafka/ssl"]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
required-features = ["executables"]

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
required-features = ["executables"]
