[package]
name = "sea-streamer-redis"
version = "0.5.2"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Redis Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-redis"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "redis", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
async-std = { version = "1", optional = true }
env_logger = { version = "0.9", optional = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
lazy_static = { version = "1.4" }
log = { version = "0.4", default-features = false }
mac_address = { version = "1" }
redis = { version = "0.25", default-features = false, features = ["acl", "streams"] }
sea-streamer-types = { version = "0.5", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.5", path = "../sea-streamer-runtime" }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
thiserror = { version = "1", default-features = false }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
default = ["runtime-tokio"] # sadly redis does not compile without a runtime
test = ["anyhow", "async-std?/attributes", "tokio?/full", "env_logger"]
executables = ["anyhow", "env_logger", "clap", "runtime-tokio", "tokio/full"]
runtime-async-std = ["async-std", "redis/async-std-comp", "sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["tokio", "redis/tokio-comp", "sea-streamer-runtime/runtime-tokio"]
runtime-async-std-native-tls = ["runtime-async-std", "redis/async-std-native-tls-comp"]
runtime-tokio-native-tls = ["runtime-tokio", "redis/tokio-native-tls-comp"]
nanosecond-timestamp = ["sea-streamer-types/wide-seq-no"]

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
required-features = ["executables"]

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
required-features = ["executables"]

[[bin]]
name = "trim-stream"
path = "src/bin/trim-stream.rs"
required-features = ["executables"]

[[bin]]
name = "test-manager"
path = "src/bin/test-manager.rs"
required-features = ["executables"]
