[package]
name = "sea-streamer-redis"
version = "0.5.2"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2024"
description = "🌊 SeaStreamer Redis Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-redis"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "redis", "stream-processing"]
rust-version = "1.85"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.11", optional = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
log = { version = "0.4", default-features = false }
mac_address = { version = "1" }
redis = { version = "1", default-features = false, features = ["acl", "streams"] }
sea-streamer-types = { version = "0.5", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.5", path = "../sea-streamer-runtime" }
smol = { version = "2", optional = true }
clap = { version = "4.5", features = ["derive", "env"], optional = true }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = ["std", "parsing"], optional = true }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]
smol-potat = "1"

[features]
default = ["runtime-tokio"] # sadly redis does not compile without a runtime
test = ["anyhow", "tokio?/full", "env_logger"]
executables = ["time", "anyhow", "env_logger", "clap", "runtime-tokio", "tokio/full"]
runtime-smol = ["smol", "redis/smol-comp", "sea-streamer-runtime/runtime-smol"]
runtime-tokio = ["tokio", "redis/tokio-comp", "sea-streamer-runtime/runtime-tokio"]
runtime-smol-native-tls = ["runtime-smol", "redis/smol-native-tls-comp"]
runtime-tokio-native-tls = ["runtime-tokio", "redis/tokio-native-tls-comp"]
nanosecond-timestamp = ["sea-streamer-types/wide-seq-no"]

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
required-features = ["executables"]

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
required-features = ["executables"]

[[bin]]
name = "trim-stream"
path = "src/bin/trim-stream.rs"
required-features = ["executables"]

[[bin]]
name = "manager-test"
path = "src/bin/manager-test.rs"
required-features = ["executables"]
