[package]
name = "sea-streamer-runtime"
version = "0.1.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer async runtime abstraction"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
# keywords = []
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-std  = { version = "1.12", optional = true }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.10", optional = true, features = ["time", "rt"] }

[dev-dependencies]

[features]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio"]
