[package]
name = "sea-streamer-runtime"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer async runtime abstraction"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-runtime"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "async-std", "tokio"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-std  = { version = "1.12", optional = true }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.10", optional = true, features = ["time", "sync", "rt"] }

[dev-dependencies]

[features]
runtime-async-std = ["async-std"]
runtime-tokio = ["tokio"]
file = ["tokio?/fs", "tokio?/io-util"]