[package]
name = "sea-streamer-stdio"
version = "0.1.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Standard I/O Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
# keywords = []
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.9.0", optional = true }
flume = { version = "0.10", default-features = false, features = ["async"] }
lazy_static = { version = "1.4" }
log = { version = "0.4", default-features = false }
nom = { version = "7" }
sea-streamer-types = { version = "0.1", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.1", path = "../sea-streamer-runtime" }
serde_json = { version = "1", optional = true }
structopt = { version = "0.3", optional = true }
thiserror = { version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = ["std", "macros", "parsing", "formatting"] }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
default = []
test = ["anyhow", "tokio/full", "env_logger", "sea-streamer-runtime/runtime-tokio"]
executables = ["anyhow", "tokio/full", "env_logger", "structopt", "serde_json", "sea-streamer-types/json", "sea-streamer-runtime/runtime-tokio"]
runtime-async-std = ["sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
required-features = ["executables"]

[[bin]]
name = "complex"
path = "src/bin/complex.rs"
required-features = ["executables"]

[[bin]]
name = "relay"
path = "src/bin/relay.rs"
required-features = ["executables"]
