[package]
name = "sea-streamer-stdio"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Standard I/O Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-stdio"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = { version = "1", optional = true }
env_logger = { version = "0.9", optional = true }
flume = { version = "0.11", default-features = false, features = ["async"] }
lazy_static = { version = "1.4" }
log = { version = "0.4", default-features = false }
nom = { version = "7" }
sea-streamer-types = { version = "0.5", path = "../sea-streamer-types" }
sea-streamer-runtime = { version = "0.5", path = "../sea-streamer-runtime" }
serde_json = { version = "1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
thiserror = { version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
tokio = { version = "1.10.0", optional = true }

[dev-dependencies]

[features]
default = []
test = ["anyhow", "tokio/full", "env_logger", "sea-streamer-runtime/runtime-tokio"]
executables = ["anyhow", "tokio/full", "env_logger", "clap", "serde_json", "sea-streamer-types/json", "sea-streamer-runtime/runtime-tokio"]
runtime-async-std = ["sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
required-features = ["executables"]

[[bin]]
name = "complex"
path = "src/bin/complex.rs"
required-features = ["executables"]

[[bin]]
name = "relay"
path = "src/bin/relay.rs"
required-features = ["executables"]
