[package]
name = "sea-streamer-types"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Traits & Types"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-types"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std", "alloc", "async-await"] }
thiserror = { version = "1", default-features = false }
time = { version = "0.3", default-features = false, features = ["std", "macros", "formatting"] }
url = { version = "2.2", default-features = false }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[features]
json = ["serde", "serde_json"]