[package]
name = "sea-streamer-price-feed"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-tungstenite = { version = "0.24", features = ["tokio-runtime", "tokio-native-tls"] }
clap = { version = "4.5", features = ["derive"] }
rust_decimal = "1.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dependencies.sea-streamer]
path = "../.." # remove this line in your own project
version = "0.5"
features = ["redis", "socket", "json"]